# fastapi-sql-virtual

./: .env  .env.example  Dockerfile  README.md  alembic.ini  development.md  docker-compose.yml  pyproject.toml
scripts/: wait-for-it.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 128d64b6fe47_initial_migration.py
src/api/: dependencies.py  main.py
src/api/v1/: main.py
src/api/v1/endpoints/: users.py
src/core/: config.py  db.py  security.py
src/email_templates/: send_email.py
src/email_templates/src/: example.mjml
src/models/: models.py
src/models/schemas/: user.py
src/models/schemas/role_related_schemas/: role_schema.py
src/services/: user_service.py
