[tool.poetry]
name = "fastapi-sql-virtual"
version = "0.1.0"
description = ""
authors = ["DuyDao <duy.dao@blueoc.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.1"
psycopg = "^3.0"
sentry-sdk = "^2.20.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
